src/components/ScoreSheet.css
.ScoreSheet {
    padding: 30px;
}

.ChessLogo {
    font-size: 32px;
}

.ScoreSheetID {
    width: 40px;
}

.Players {
    font-size: 18px;
    font-family: "Source Sans Pro", sans-serif;
    font-weight: 500;
    color: #7c795d;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    border: 1px solid #ccc;
}

th,
td {
    text-align: left;
    padding: 10px;
    border: 1px solid #ccc;
}

tr:nth-child(even) {
    background-color: #eee;
    -webkit-print-color-adjust: exact;
}

.Event {
    display: inline-block;
    margin-left: 20px;
}

.Error {
    color: red;
    margin: 30px;
}

@media print {
    .ScoreSheet {
        page-break-after: auto;
        padding: 30px;
    }

    .ScoreSheet:last-child {
        page-break-after: avoid;
    }

    th,
    td {
        padding: 6px 10px 6px;
    }
}

.flex-container {
    padding: 0;
    margin: 0 0 10px;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    justify-content: space-between;
}

.flex-item {
    font-weight: bold;
    font-size: 1em;
    text-align: left;
    flex: 1 1 auto;
}

.Result {
    color: #4c4a37;
    text-align: right;
    font-weight: 500;
    font-family: "Source Sans Pro", sans-serif;
}


/* Style buttons */
.ActionBtn {
    color: #565b8a;
    font-size: 22px; /* Set a font size */
    line-height: 30px;
    width: 30px;
    transition: transform .2s; /* Animation */
    height: 23px;
    cursor: pointer; /* Mouse pointer on hover */
    float: right;
  }
  
  /* Darker background on mouse-over */
  .ActionBtn:hover {
    transform: scale(1.2); 
  }

